# amphiphile

./: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  decisions.md  plan.md  review.md  review_prompt.md
notebooks/: train_chemprop_colab.ipynb
reports/error_analysis/: report.md  summary.json  worst_compounds.csv
scripts/: data_quality.py  error_analysis.py  model_diagnostics.py  profile_inference.py  recalibrate_chemprop.py
src/logd/: __init__.py  api.py  cli.py  features.py  inference.py  training.py  uncertainty.py  utils.py
src/logd/data/: chembl.py  expansionrx.py  openadmet.py  openadmet_chembl.py  splits.py
src/logd/models/: baseline.py  chemprop_wrap.py  ensemble.py
tests/: test_api.py  test_chemprop.py  test_features.py  test_inference.py  test_integration.py  test_robustness.py  test_splits.py  test_uncertainty.py
