[project]
name = "logd"
version = "0.1.0"
description = "logD prediction service — deepmirror take-home"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "ckirkup" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "rdkit>=2024.3.1",
    "torch>=2.2",
    "chemprop>=2.0",
    "chembl-downloader>=0.5",
    "joblib>=1.3",
    "pyarrow>=15.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "psutil>=5.9",
    "matplotlib>=3.8",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "py-spy>=0.3",
]

[project.scripts]
logd = "logd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that train real models (deselect with -m 'not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
