[project]
name = "logd"
version = "0.1.0"
description = "logD prediction service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "ckirkup" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "rdkit>=2024.3.1",
    "torch>=2.2",
    "chemprop>=2.0",
    "joblib>=1.3",
    "pyarrow>=15.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "psutil>=5.9",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "py-spy>=0.3",
    "httpx>=0.27",
]

[project.scripts]
logd = "logd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that train real models (deselect with -m 'not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    "N806",   # X is standard ML convention for feature matrices
    "N803",   # same for function arguments
    "RUF002", # unicode in docstrings (mathematical symbols)
    "RUF003", # same
]

[tool.ruff.lint.per-file-ignores]
"src/logd/cli.py" = ["B008"]  # typer.Option() in defaults is the standard pattern

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# numpy generic ndarray typing is impractical in scientific code
disable_error_code = ["type-arg"]
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["logd.features", "logd.data.*", "scripts.*"]
# RDKit and other cheminformatics libs lack type stubs
disallow_untyped_calls = false
warn_return_any = false
